Added action_del_recipient to the list of actions. Updated sample config.

--- a/milter_env_addr_mangle.yml
+++ b/milter_env_addr_mangle.yml
@@ -12,3 +12,11 @@
     - add_recipient:
       - 'recipient4@localhost'
       - 'recipient5@localhost'
+
+- env_sender: 'sender1@localhost'
+  env_recipient: 'recipient4@localhost'
+  subject: 'Hello!'
+  actions:
+    - del_recipient:
+      - 'recipient4@localhost'
+      - 'recipient6@localhost'
