--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,9 +21,7 @@ jobs:
     steps:
       - run:
           name: Add EPEL repo
-          command: |
-            wget http://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
-            rpm -ivh epel-release-latest-7.noarch.rpm
+          command: rpm -ivh http://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm
       - run:
           name: Install prerequisites
           command: yum -y install git zip go
